--- a/bmi_calc.css
+++ b/bmi_calc.css
@@ -32,6 +32,10 @@ body {
   height: 300px;
   background-color: #fff;
   flex-direction: column;
+  border-radius: 10px;
+  -webkit-box-shadow: 0px 0px 11px -2px rgba(0,0,0,0.75);
+  -moz-box-shadow: 0px 0px 11px -2px rgba(0,0,0,0.75);
+  box-shadow: 0px 0px 11px -2px rgba(0,0,0,0.75);
 }
 
 .center {
